--- a/info.yaml
+++ b/info.yaml
@@ -1,11 +1,11 @@
 # Tiny Tapeout project information
 project:
-  title:        ""      # Project title
-  author:       ""      # Your name
-  discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  title:        "Multicycle path test"      # Project title
+  author:       "Toivo Henningsson"      # Your name
+  discord:      "possible_realities"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  description:  "Testing how to use multicycle paths in Tiny Tapeout" # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
-  clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
+  clock_hz:     50000000  # Clock frequency in Hz (or 0 if not applicable)
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
@@ -22,9 +22,9 @@ project:
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
+  ui[0]: "x_in"
+  ui[1]: "y_in"
+  ui[2]: "shift_en"
   ui[3]: ""
   ui[4]: ""
   ui[5]: ""
@@ -32,7 +32,7 @@ pinout:
   ui[7]: ""
 
   # Outputs
-  uo[0]: ""
+  uo[0]: "sum_bit"
   uo[1]: ""
   uo[2]: ""
   uo[3]: ""
@@ -42,12 +42,12 @@ pinout:
   uo[7]: ""
 
   # Bidirectional pins
-  uio[0]: ""
-  uio[1]: ""
-  uio[2]: ""
-  uio[3]: ""
-  uio[4]: ""
-  uio[5]: ""
+  uio[0]: "sum_sel[0]"
+  uio[1]: "sum_sel[1]"
+  uio[2]: "sum_sel[2]"
+  uio[3]: "sum_sel[3]"
+  uio[4]: "sum_sel[4]"
+  uio[5]: "sum_sel[5]"
   uio[6]: ""
   uio[7]: ""
 
